<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/coclogo"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edit_tag"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/app_logo"
            android:layout_marginTop="10dp"
            android:hint="@string/PlayerTag"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:background="@drawable/edit_background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:minHeight="50dp"
            />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/edit_tag"
            android:layout_marginTop="10dp"
            android:hint="@string/Name"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:background="@drawable/edit_background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:minHeight="50dp"
            />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/edit_name"
            android:layout_marginTop="10dp"
            android:hint="@string/Email"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:background="@drawable/edit_background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:minHeight="50dp"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/edit_email"
            android:layout_marginTop="10dp"
            android:hint="@string/Password"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:background="@drawable/edit_background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:minHeight="50dp"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/edit_password"
            android:layout_marginTop="10dp"
            android:hint="@string/Password"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:background="@drawable/edit_background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:minHeight="50dp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_password"
            android:text="@string/Sign_up"
            android:background="@drawable/filled_button"
            android:textColor="@color/darkWhite"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/txtTutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Tutorial"
            android:textAllCaps="true"
            android:textColor="@color/darkWhite"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>


</ScrollView>